# SIONlib-dispatch

./: Makefile.am  README.md  configure.ac
include/: Makefile.am  siondispatch.h
src/: Makefile.am  siondispatch.c  sionfile.c  sionfunc.c  sionvar.c
test/: Makefile.am  tst_read1.c
